--- a/_config.yml
+++ b/_config.yml
@@ -93,4 +93,5 @@ friends:
   [
     { title: "bilibili", href: "http://www.bilibili.com/" },
     { title: "github", href: "https://www.github.com/" },
+    { title: "沙罗's pixiv", href: "https://www.pixiv.net/users/43232131" },
   ]
