--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+# disqus_username: hux
 
 # Netease settings
 netease_comment: false
@@ -69,12 +69,12 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
+ga_track_id: "G-DRBYQB91GJ" # Format: UA-xxxxxx-xx
 ga_domain: pqqqya.github.io
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "假装是一个介绍"
+sidebar-about-description: "计算机相关专业在读，游戏玩家，时政历史观察者"
 sidebar-avatar: https://pqqqya.github.io/img/avatar-jiesenhe.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
@@ -93,5 +93,5 @@ friends:
   [
     { title: "bilibili", href: "http://www.bilibili.com/" },
     { title: "github", href: "https://www.github.com/" },
-    { title: "沙罗's pixiv", href: "https://www.pixiv.net/users/43232131" },
+    { title: "pixiv", href: "https://www.pixiv.net/" },
   ]
