--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: pqqqYa Blog
 SEOTitle: pqqqYa的博客 | pqqqYa Blog
 header-img: img/home-bg.jpg
 email: JiesenHe@outlook.com
-description: "一蓑烟雨任平生"
+description: "Nothing is true, everything is permitted."
 keyword: "pqqqYa, JiesenHe"
 url: "https://pqqqya.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
@@ -74,7 +74,7 @@ ga_domain: pqqqya.github.io
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "计算机相关专业在读，游戏玩家，时政历史观察者"
+sidebar-about-description: "计算机相关专业在读，游戏玩家，军事时政历史爱好者"
 sidebar-avatar: https://pqqqya.github.io/img/avatar-jiesenhe.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
