--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ page-mathjax: false
 # Friends
 friends:
   [
-    { title: "bilibili", href: "http://www.bilibili.com/" },
-    { title: "github", href: "https://www.github.com/" },
-    { title: "pixiv", href: "https://www.pixiv.net/" },
+    { title: "bilibili", href: "https://space.bilibili.com/295948407" },
+    { title: "gitee", href: "https://gitee.com/jiesenhe" },
+    { title: "github", href: "https://github.com/pqqqYa" },
   ]
