--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-# disqus_username: hux
+# disqus_username: 
 
 # Netease settings
 netease_comment: false
@@ -86,7 +86,7 @@ chrome-tab-theme-color: "#000000"
 service-worker: false
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: false
+page-mathjax: ture
 
 # Friends
 friends:
