--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ chrome-tab-theme-color: "#000000"
 service-worker: false
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: ture
+page-mathjax: false
 
 # Friends
 friends:
