--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ RSS: false
 #weibo_username: 
 #zhihu_username: 
 github_username: pqqqYa
+gitee_username: JiesenHe
 #twitter_username: 
 #facebook_username:  
 #linkedin_username:  firstname-lastname-idxxxx
