--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ future: true
 RSS: false
 #weibo_username: 
 #zhihu_username: 
-github_username: pqqqYa
-gitee_username: JiesenHe
+#github_username:
+#gitee_username:
 #twitter_username: 
 #facebook_username:  
 #linkedin_username:  firstname-lastname-idxxxx
