--- a/_config.yml
+++ b/_config.yml
@@ -95,4 +95,5 @@ friends:
     { title: "bilibili", href: "https://space.bilibili.com/295948407" },
     { title: "gitee", href: "https://gitee.com/jiesenhe" },
     { title: "github", href: "https://github.com/pqqqYa" },
+    { title: "Exhibition", href: "https://jiesenhe.github.io/" },
   ]
